# Momo

./: .gitignore  CMakeLists.txt  README.md  fix_textarea.qml_patch  gen_qrc.py  momo.sh  qml.qrc  test_debug.cpp
qml/: ContextMenuItem.qml  FileNode.qml  MenuItemRow.qml  MenuSeparatorRow.qml  main.qml
src/: DocumentManager.cpp  DocumentManager.h  EditorBackend.cpp  EditorBackend.h  FileDialogManager.cpp  FileDialogManager.h  FileSystemModelWrapper.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TerminalManager.cpp  TerminalManager.h  main.cpp
